feat(groups): changed type of create endpoint to POST
